tests/NormalTests/paczka1/fuzzy1/43905490.err
Error in line 7: NkuNFMR A909 96,6
Error in line 6: 3FcsEYydb S204 54,0
Error in line 9: NkuNFMR A880 92,6
Error in line 14: NkuNFMR S204 53,5
Error in line 18: NkuNFMR A401 32,7
Error in line 11: A880 S204 0,4
Error in line 33: AiKFqC84i A401 8,8
